error_output.log
./repo\src\code.c:255:7: error: too few arguments to function call, expected 2, have 1
  255 |         mul(a);
      |         ~~~  ^
./repo\src\code.c:45:6: note: 'mul' declared here
   45 | void mul(Bighex a, Bighex b) {
      |      ^   ~~~~~~~~~~~~~~~~~~
1 error generated.

